Closed Bug 1309515 Opened 9 years ago Closed 9 years ago

Double composite Arabic characters

Categories

(Core :: Widget: Cocoa, defect)

49 Branch
x86_64
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla52
Tracking Status
firefox49 --- wontfix
firefox-esr45 --- unaffected
firefox50 --- fixed
firefox51 --- fixed
firefox52 --- verified

People

(Reporter: mpcabd, Assigned: masayuki)

References

Details

(Keywords: inputmethod, regression)

Attachments

(3 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:49.0) Gecko/20100101 Firefox/49.0 Build ID: 20160922113459 Steps to reproduce: Running Mac OS X 10.11.6 El Capitan, Firefox 49.0.1, I have the Arabic PC layout in my keyboard layout settings, switch to the Arabic PC layout, and then press each one of the following key combinations on a qwerty keyboard: 1. Shift+G 2. Shift+T 3. Shift+B 4. B Actual results: You would get the same character twice: 1. لألأ 2. لإلإ 3. لآلآ 4. لالا Expected results: Each character must be show once: 1. لأ 2. لإ 3. لآ 4. لا --- Extra info: These are composed of the letter lam (ل) and one of the letters (إ, أ, آ, ا), and they have their own Unicode characters and have their own key combination to make it faster to write. Typing the letter lam and then one of the other letters doesn't produce the problem, but pressing on the combinations above produces it. I didn't have this problem before, so I guess it's new in the latest update.
OS: Unspecified → Mac OS X
Hardware: Unspecified → x86_64
Just a note also, I disabled all extensions and add-ons and made sure I don't have anything enabled, and the problem persists.
Confirmed on Firefox 49.0.1 and Nightly 52.0a1 (2016-10-11) (64-bit).
Component: Untriaged → Widget: Cocoa
Keywords: inputmethod
Product: Firefox → Core
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee: nobody → masayuki
Flags: needinfo?(masayuki)
Status: NEW → ASSIGNED
Comment on attachment 8800548 [details] Bug 1309515 part.1 Add automated tests for Arabic - PC keyboard layout which can input 2 characters with a key press https://reviewboard.mozilla.org/r/85468/#review84376
Attachment #8800548 - Flags: review?(m_kato) → review+
Comment on attachment 8800549 [details] Bug 1309515 part.2 TextInputHandler::InsertText() should consume current key event when it dispatches composition events https://reviewboard.mozilla.org/r/85470/#review84394
Attachment #8800549 - Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/8eeb7978e143 part.1 Add automated tests for Arabic - PC keyboard layout which can input 2 characters with a key press r=m_kato https://hg.mozilla.org/integration/autoland/rev/093adc51a4db part.2 TextInputHandler::InsertText() should consume current key event when it dispatches composition events r=m_kato
Only part.1 cannot be merged with Aurora nor Beta because bug 1303273 added some keyboard layouts for Windows in EventUtils.js.
Attachment #8800994 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Comment on attachment 8800994 [details] [diff] [review] Bug 1309515 part.1 Add automated tests for Arabic - PC keyboard layout which can input 2 characters with a key press (for aurora) Approval Request Comment [Feature/regressing bug #]: regression of bug 1230053 [User impact if declined]: Some Arabic users who use "Arabic - PC" keyboard layout cannot type text as they expected. [Describe test coverage new/current, TreeHerder]: Landed on m-c at last week. [Risks and why]: Low because this just stops dispatching eKeyPress events if a set of composition events are fired during handling a native NSKeyDown event. [String/UUID change made/needed]: Nothing.
Attachment #8800994 - Flags: approval-mozilla-beta?
Attachment #8800994 - Flags: approval-mozilla-aurora?
Comment on attachment 8800549 [details] Bug 1309515 part.2 TextInputHandler::InsertText() should consume current key event when it dispatches composition events Approval Request Comment: See the previous comment.
Attachment #8800549 - Flags: approval-mozilla-beta?
Attachment #8800549 - Flags: approval-mozilla-aurora?
(In reply to Masayuki Nakano [:masayuki] (Mozilla Japan) from comment #15) > [Feature/regressing bug #]: regression of bug 1230053 Oops, the bug# is wrong. It's bug 1280053.
Hello Abd Allah Diab, could you please verify this issue is fixed as expected on a latest Nightly build? Thanks!
Flags: needinfo?(mpcabd)
Comment on attachment 8800994 [details] [diff] [review] Bug 1309515 part.1 Add automated tests for Arabic - PC keyboard layout which can input 2 characters with a key press (for aurora) Let's uplift to Aurora51 to stabilize. I'll be inclined to take this in Beta50 only if there is a verification, otherwise we will let it ride the 51 train.
Attachment #8800994 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Attachment #8800549 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Tested firefox-52.0a1 and the problem is fixed. Thank you guys!
Flags: needinfo?(mpcabd)
(In reply to Abd Allah Diab from comment #21) > Tested firefox-52.0a1 and the problem is fixed. > > Thank you guys! Thanks a lot for a prompt verification.
Status: RESOLVED → VERIFIED
Comment on attachment 8800994 [details] [diff] [review] Bug 1309515 part.1 Add automated tests for Arabic - PC keyboard layout which can input 2 characters with a key press (for aurora) Fix was verified on Nightly52, has been on Aurora51 for a few days, Beta50+
Attachment #8800994 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #8800549 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: